--- a/code-diver/assets/index.html
+++ b/code-diver/assets/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Sidebar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Diver</title>
 </head>
+
 <body>
-  <h1>Welcome to My Sidebar!</h1>
-  <p>This is custom content in your sidebar.</p>
+    <header>Welcome to Code-Diver</header>
+    <main></main>
+    <footer>Jason-GROSSO 2025</footer>
 </body>
+
 </html>
